# anima-trainer

./: .gitignore  CLAUDE.md  README.md  anima_colab.py  pyproject.toml  requirements-torch.txt  requirements.txt
docs/: subject-bucketing.md
geolip_anima_trainer/: PRELIM_PLAN.md  __init__.py  api.py  build_multiconcept_dataset.py  cache_factory.py  cache_monitor.py  cache_sync.py  cli.py  config.py  doctor.py  download_anima.py  dp_compat.py  hf_to_diffusion_pipe.py  launch.py  subject_buckets.py  subject_similarity.py  trainer_runner.py
geolip_anima_trainer/_dp_compat/: sitecustomize.py
geolip_anima_trainer/templates/: anima_dataset.toml  anima_lora.toml
notebooks/: README.md  anima_colab_cache_factory.ipynb  anima_colab_prelim_train.ipynb  anima_full90k_train.ipynb  anima_rtx6000_train.ipynb
tests/: test_bridge.py  test_cache_factory.py  test_cache_monitor.py  test_cache_sync.py  test_config.py  test_dp_compat.py  test_launch.py  test_portable_paths.py  test_reconstruct.py  test_subjects.py  test_trainer_runner.py
