[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geolip-anima-trainer"
version = "0.1.0"
description = "Bridge + orchestration to finetune CircleStone Anima (2B DiT) with tdrussell/diffusion-pipe."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }   # the tooling code; the Anima MODEL/weights are non-commercial (see README)
authors = [{ name = "AbstractPhil" }]
keywords = ["anima", "diffusion-pipe", "lora", "finetuning", "text-to-image"]

# LIGHT BRIDGE DEPS ONLY. torch is deliberately absent — it must come from the
# CUDA wheel index, not PyPI (see requirements-torch.txt / README). tomllib is
# stdlib on 3.12 (reads); TOML is hand-rendered for writes (no tomli-w needed).
dependencies = [
    "huggingface_hub>=0.23",   # download_anima.py
    "datasets>=2.19,<3",       # hf_to_diffusion_pipe.py streaming (3.x changed Image decode)
    "Pillow>=10",              # img.convert("RGB").save(...)
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "build>=1.2"]
# Real semantic grouping of sparse subject buckets (offline, once per extraction).
# Default model all-MiniLM-L6-v2 (~90 MB first use), or pass nomic-embed-text-v1 to
# reuse a model already cached. Without this extra, grouping falls back to a numpy
# char-trigram backend (morphological) then difflib — never drops, just less semantic.
similarity = ["sentence-transformers>=2.7,<4"]

[project.scripts]
anima = "geolip_anima_trainer.cli:main"

[project.urls]
Homepage = "https://github.com/AbstractPhil/anima-trainer"

[tool.setuptools]
packages = ["geolip_anima_trainer"]

[tool.setuptools.package-data]
geolip_anima_trainer = ["templates/*.toml", "_dp_compat/*.py"]
